Yönetim sistemi güncellendi.

--- a/public/storage/template/manage/css/custom.css
+++ b/public/storage/template/manage/css/custom.css
@@ -40,3 +40,9 @@
 .dropzone .dz-preview .dz-remove{
     text-decoration: none!important;
 }
+
+@media only screen and (max-width: 576px) {
+    .orderdetailcontent {
+        width: 100%!important;
+    }
+}
